Aula 1 - continuação HTML
+ HTML5

--- a/minha_pag.html
+++ b/minha_pag.html
@@ -18,5 +18,12 @@
         <p>A linguagem HTML é uma linguagem <strong>de marcação</strong></p>
         <img src="itachi.webp" alt="AMATERSASU!" width="400" height="400">
         <img src="SASUKE.gif" alt="Sasuke Amaterasu">
+        <p>
+            <!--Tag <a> é para links-->
+            <a href="https://html.spec.whatwg.org" target="_blank">HTML</a> é uma linguagem <strong>de marcação</strong>
+        </p>
+        <a href="https://www.google.com"><img src="https://img2.cgtrader.com/items/2590278/0572f24550/google-logo-v1-002-3d-model-low-poly-max-obj-3ds-fbx-ma-stl.jpg" width="300"></a>
+        <!--Abre o app de e-mail-->
+        <p>Entre em <a href="mailto:arthur.sarnadas@gmail.com">contato</a> comigo!</p>
     </body>
 </html>
